
Changes in version 0.7.5
- Fixed potential bug in JEventLoopGetFactory where NULL pointers could
  be passed to strcmp
- Fixed bug in PrintFactoryReport where long factory names could cause crash
- Fixed bug in janaroot where string types containing colons would
  have values truncated to first colon
- Print date/time of when a thread finishes.
- Added THREAD_STALL_WARN_TIMEOUT

Changes in version 0.7.4p2
- Fixed bug in JFactory::Get where event number and run number types
  of local variables were not consistent with rest of JANA.

Changes in version 0.7.4p1
- Fixed bug where default JEventProcessor::evnt was calling int version of
  itself leading to hangs.
- Fixed problem in SBMS AddROOT where it assumed (DY)LD_LIBRARY_PATH was
  set. This caused crashes on OS X El Capitan

Changes in version 0.7.4
- Fixed bug in location osrelease.pl was being run
- Fixed bug where JGeometryXML.cc wouldn't compile without XERCES
- Allow user to force bitness of build using either m32=1 or m64=1
- Added -a, -t, and -b options to janadump. Some modifications
  to JEventLoop, JFactory, and JFactory_base made to allow better
  user control of when GetNrows activates a factory.
- Default for janadump changed to not automatically activate tagged
  factories when printing summary header.
- Add SetExitCode and GetExitCode to JApplication.
- Added examples to scons build tree.
- Fixed bug where DEFTAG: feature only worked if AUTOACTIVATE was used
- Default compiler now c++/cc instead of g++/gcc and optimization on
  by default (as well as all compiler warnings)
- Added support for compiling with ROOT 6
- Made unsigned 64bit event number requirement (and signed 32bit for run)
- Added JANA:RESOURCE_DEFAULT_PATH conf. par.
- Added macros directory with some example ROOT macros

Changes in version 0.7.3
- Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
- Add janaview plugin
- Add support for stdint types like uint32_t in janaroot